# vex_hk

./: .env  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README  README.md  check_individual_features.sh  extra_commands.md  msrc_plan.md
src/: config.rs  csv_postgres_integration.rs  default_config.rs  download.rs  github.rs  lib.rs  main.rs  osv_schema.rs  scraper_status.rs  state.rs  status.rs  utils.rs
src/crawl_mod/: consts.rs  mod.rs  structs.rs
src/db_api/: consts.rs  copy.rs  create.rs  db_connection.rs  delete.rs  insert.rs  mod.rs  query_db.rs  structs.rs  utils.rs
src/db_mod/: mod.rs
src/resources/: config.conf
src/scrape_mod/: alienvault_crawler.rs  alienvault_scraper.rs  consts.rs  csv_conversion.rs  csv_postgres_integration.rs  exploitdb_crawler.rs  exploitdb_scraper.rs  github_scraper.rs  mod.rs  nvd_crawler.rs  nvd_scraper.rs  osv_scraper.rs  structs.rs
src/scrape_mod/github/: api_caller.rs  api_data_retriever.rs  api_response.rs  full_data.rs  individual_rep_osv.rs  mod.rs  osv_file_from_api_downloader.rs  paginated_api.rs  repository.rs  repository_update.rs  rest_api.rs  scraper.rs
src/scrape_mod/osv/: full.rs  mod.rs  update.rs
src/utils/: config.rs  env.rs  mod.rs  time.rs
vex_hk_bin/: .gitignore  Cargo.toml  rustfmt.toml
vex_hk_bin/src/: main.rs
