[package]
name = "exploit_vulnerability_hunter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
#tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"] }
chrono = "0.4.38"
sqlx = { version = "0.8.2", features = ["postgres", "macros", "runtime-tokio"] }
dotenv = { version = "0.15.0"}
scraper = { version = "0.20.0" }
regex = "1.11.0"

