[package]
name = "vex_hk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.40"
sqlx = { version = "0.8.3", features = ["postgres", "macros", "runtime-tokio"] }
dotenv = { version = "0.15.0"}
scraper = { version = "0.23.1" }
log = "0.4.26"
csv = "1.3.1"
async-trait = "0.1.87"
zip = "2.2.2"
quick-xml = "0.37.2"
thiserror = "2.0.12"
env_logger = "0.11.6"

