[package]
name = "vex_hk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.40", features = ["serde", "alloc"] }
sqlx = { version = "0.8.3", features = ["postgres", "macros", "runtime-tokio"] }
dotenv = { version = "0.15.0"}
scraper = { version = "0.23.1" }
log = "0.4.26"
csv = "1.3.1"
async-trait = "0.1.87"
# zip bug (https://github.com/zip-rs/zip2/pull/356)
# zip = "3.0.0"
zip = { path = "./zip2" }
quick-xml = "0.37.2"
thiserror = "2.0.12"
env_logger = "0.11.6"
human_bytes = "0.4" # human readable bytes
bytes = "1.10.1"
futures-util = "0.3.31"
indicatif = { version = "0.17.11", features = ["futures"] }
indicatif-log-bridge = "0.2.3"
regex = "1.11.1"
const_format = "0.2.34"

[features]
"default" = ["osv"]
"alienvault" = []
"exploitdb" = []
"nvd" = []
"osv" = []
