[package]
name = "vex_hk_bin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = "0.11.8"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
log = "0.4.27"
reqwest = "0.12.20"
serde_json = "1.0.140"
tokio = "1.45.1"
vex_hk = { path = "../" }
